# Metaprogramming

./: README.md
lab1/JSONFormatter/: .gitignore  CMakeLists.txt  JSONFormatter.sln
lab1/JSONFormatter/JSONFormatter/: ConfigParser.cpp  ConfigParser.h  Controller.cpp  Controller.h  JSONFormatter.cpp  JSONFormatter.h  JSONFormatter.vcxproj  JSONFormatter.vcxproj.filters  JSONLexer.cpp  JSONLexer.h  Logger.cpp  Logger.h  Token.h  main.cpp
lab1/JSONFormatter/examples/: config.ini  example.json
lab1/JSONFormatter/src/: ConfigParser.cpp  ConfigParser.h  Controller.cpp  JSONFormatter.cpp  JSONLexer.h  main.cpp
lab2/: README.md  main.py
lab2/examples/: test.js
lab2/examples/subdir/: test.js
lab2/lexical_analysis/: lexema.py  lexer.py
lab2/semantical_analysis/: naming_fixer.py  parser.py
